Fixed header alignment

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -261,7 +261,7 @@ select.form-control {
     box-sizing: border-box;
     cursor: pointer;
     background: $pink;
-    color: darken($pink, 25%);
+    color: darken($pink, 30%);
     user-select: none;
     box-shadow: 10px 10px 20px darken($pink, 20%);
     &::before {
